--- a/public/views/index.html
+++ b/public/views/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
 
 
-        <title>SAWACS</title>
+        <title>SAWACS.at</title>
 
         <link rel="stylesheet" href="../css/index.css">
     </head>
