--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
 
 
-        <title>SAWACS.at</title>
+        <title>spreadlove.one</title>
 
         <link rel="stylesheet" href="../css/index.css">
     </head>
@@ -13,7 +13,7 @@
         <header class="header">
             <nav class="navbar">
                 <ul>
-                    <li>Link 1</li>
+                    <li><%= navbar-link1 %></li>
                     <li>Link 2</li>
                     <li>Link 3</li>
                 </ul>
