--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,14 +6,14 @@
 
         <title>spreadlove.one</title>
 
-        <link rel="stylesheet" href="../css/index.css">
+        <link rel="stylesheet" href="../public/css/index.css">
     </head>
     <body>
         <!-- HEADER -->
         <header class="header">
             <nav class="navbar">
                 <ul>
-                    <li><%= navbar-link1 %></li>
+                    <li><%= navLink1 %></li>
                     <li>Link 2</li>
                     <li>Link 3</li>
                 </ul>
