--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,18 +1,9 @@
-<html lang="de">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site not found</title>
-    <style type="stylesheet">
-        html{
-            box-sizing: border-box;
-        }
-        body{
-            background-color: lightcoral;
-        }
-    </style>
-</head>
-    <body>
-        <h1><%= failureTitle %></h1>        
-    </body>
-</html>
+<!-- HEADER -->
+<%- include('./includes/header.ejs') %>
+
+
+<h1><%= failureTitle %></h1>        
+
+
+<!-- FOOTER -->
+<%- include('./includes/footer.ejs') %>
