--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,59 +1,20 @@
-<!DOCTYPE html>
-<html lang="de-DE">
-    <head>
-        <meta charset="UTF-8">
+<!-- HEADER -->
+<%- include('./includes/header.ejs') %>
 
 
-        <title>spreadlove.one</title>
-
-        <link rel="stylesheet" href="../public/css/index.css">
-    </head>
-    <body>
-        <!-- HEADER -->
-        <header class="header">
-            <nav class="navbar">
-                <ul>
-                    <li><%= navLink1 %></li>
-                    <li>Link 2</li>
-                    <li>Link 3</li>
-                </ul>
-            </nav>    
-        </header>
-
-        <!-- SECTION -->
-        <section>
-            <div class="container">
-                <div class="sidebar-left">
-                    <a href="/" target="_blank" rel="noopener noreferrer">
-                        Sidebar left
-                    </a>
-                </div>
-                <div class="main">Main</div>
-                <div class="sidebar-right">Sidebar right</div>
-            </div>
+<!-- SECTION -->
+<section>
+    <div class="container">
+        <div class="sidebar-left">
+            <a href="/" target="_blank" rel="noopener noreferrer">
+                Sidebar left
+            </a>
         </div>
+        <div class="main">Main</div>
+        <div class="sidebar-right">Sidebar right</div>
+    </div>
+</div>
 
-        <!-- FOOTER -->
-        <footer>
-            <div class="footer-container">
-                <ul>
-                    <li>
-                        <a href="/" target="_blank" rel="noopener noreferrer">
-                            Link 1
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/" target="_blank" rel="noopener noreferrer">
-                            Link 2
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/" target="_blank" rel="noopener noreferrer">
-                            Link 3
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </footer>
-    </body>
-</html>
+
+<!-- FOOTER -->
+<%- include('./includes/footer.ejs') %>
