--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -23,6 +23,7 @@
                     <li class="navbar-item"><a href="/authentication/login"><%= navLink1 %></a></li>
                     <li class="navbar-item"><a href="/">Seite 2</a></li>
                     <li class="navbar-item"><a href="/">Seite 3</a></li>
+                    <li class="navbar-item"><a href="/"><<i class="fas fa-baby"></i></a></li>
                 </ul>
             </nav>    
         </header>
