--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
 
 <section>
     <div class="container" style="font-size: 4rem; color: darkblue">
-        SpreadLove <i class="fas fa-child"></i>
+        SpreadLove <i class="fas fa-child" style='font-size:3rem'></i>
     </div>
 </section>
 
