--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -8,7 +8,7 @@
 
         <link rel="stylesheet" href="/css/index.css">
         <link rel="stylesheet" href="/css/all.css">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <!--<link rel="preconnect" href="https://fonts.gstatic.com">-->
         <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
     </head>
     <body>
