--- a/views/authentication/login.ejs
+++ b/views/authentication/login.ejs
@@ -180,10 +180,11 @@ input[type=submit]:active {
     <div class="container">
         <div class="login">
             
-            <h1>Login-Form to SpreadLove:</h1>
+            <h1>Login-Form to SpreadLove: <%= name %></h1>
             <form method="POST" action="/login">
-                <p><input type="text"     name="login"    value="" placeholder="Username or Email"></p>
-                <p><input type="password" name="password" value="" placeholder="Password"></p>
+                <p><input type="text"     name="name"     value=" <%= name %> "     placeholder="* Full Name"></p>
+                <p><input type="text"     name="email"    value=" <%= email %> "    placeholder="* Username or Email"></p>
+                <p><input type="password" name="password" value=" <%= password %> " placeholder="* Password"></p>
                 <p class="remember_me">
                 <label>
                     <input type="checkbox" name="remember_me" id="remember_me">
