--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,21 +3,23 @@
 
 
 <!-- SECTION HEADER -->
-<section>
-    <div class="container" style="font-size: 4rem; color: darkblue">
+<!-- <main>
+    <section class="firstSection">
+        <h1>You have finally found what you were searching for!</h1>
+    </section>
+</main> -->
+
+<section class="landingImage">
+    <div class="landingContainer" style="font-size: 4rem; color: darkblue">
         <% if(name) { %>
-            SpreadLove: <%= name %>! <i class="fas fa-child" style='font-size:5rem; color:red'></i><i class="fas fa-heart" style='position: relative; font-size:2rem; top: -4rem; color:red; transform:rotate(30deg);'></i>
+            SpreadLove: <%= name %>! <i class="fas fa-child" style='font-size:5rem; color:red'></i><i class="fas fa-heart" style='position: relative; font-size:2.2rem; top: -4rem; left:-1rem; color:red; transform:rotate(20deg);'></i>
         <% } else { %>
             SpreadLove Every.ONE! <i class="fas fa-child" style='font-size:5rem; color:darkblue'></i>
         <% } %>
     </div>
-</section>
-
-<!-- SECTION 1: About -->
-<section>
-    <div class="container">
-        <h1>Willkommen auf unserer Site </h1>
-    </div>
+    <% if(message) { %>
+        <div class="message"><%= message %></div>
+    <% } %>
 </section>
 
 
