--- a/public/css/index.css
+++ b/public/css/index.css
@@ -9,6 +9,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: white;
+  overflow: hidden;
   /*---------------------------------------------------------------------------------------*
      *                                 H E A D E R                                           *
      *---------------------------------------------------------------------------------------*/
@@ -82,18 +83,16 @@ body .main-header .navbar .navbar-items .navbar-item {
   display: inline-block;
   margin: 0 .6rem;
   padding: .25rem 1rem;
-  background-color: rgba(0, 0, 255, 0.3);
-  border: 2px solid darkblue;
+  border-bottom: 2px solid darkblue;
   border-radius: 10%;
   -webkit-transition: .2s all;
   transition: .2s all;
 }
 
 body .main-header .navbar .navbar-items .navbar-item:hover, body .main-header .navbar .navbar-items .navbar-item:active {
-  background-color: rgba(0, 0, 255, 0.6);
-  font-style: italic;
   font-weight: bold;
-  color: white;
+  border-bottom: 2.5px solid darkblue;
+  padding: .5rem 1rem;
 }
 
 body .main-header .navbar .navbar-items .navbar-item a {
@@ -101,14 +100,25 @@ body .main-header .navbar .navbar-items .navbar-item a {
   letter-spacing: .1rem;
 }
 
-body section {
-  width: 100%;
-  margin-top: 0;
-  height: 600px;
-  background: radial-gradient(at top right, white 0%, rgba(196, 72, 72, 0.48) 100%);
+body .main-header .navbar .navbar-items .navbar-item.displayTRUE {
+  visibility: visible;
 }
 
-body section .container {
+body .main-header .navbar .navbar-items .navbar-item.displayFALSE {
+  visibility: hidden;
+}
+
+body .landingImage {
+  width: 100%;
+  background-image: url("../img/index.jpg");
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: cover;
+  top: 5rem;
+  height: 600px;
+}
+
+body .landingImage .landingContainer {
   position: relative;
   margin: 0;
   padding: 0;
@@ -117,6 +127,26 @@ body section .container {
   top: 20rem;
   left: 4rem;
   font-family: 'Dancing Script', cursive;
+}
+
+body .landingImage .message {
+  background-color: lightgray;
+  border-color: 0.3rem solid #1100ff;
+  width: 100%;
+  margin: 0;
+  padding: 1rem 2rem;
+  text-align: center;
+  font-weight: bolder;
+  color: darkblue;
+}
+
+body .landingImage #landingPageVideo {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
 }
 
 body footer {
