--- a/public/css/index.scss
+++ b/public/css/index.scss
@@ -9,6 +9,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: white;
+    overflow: hidden;
 
     /*---------------------------------------------------------------------------------------*
      *                                 H E A D E R                                           *
@@ -73,23 +74,28 @@ body {
                     display: inline-block;
                     margin: 0 .6rem;
                     padding: .25rem 1rem;
-                    background-color: rgba($color: blue, $alpha: .3);
-                    border: 2px solid darkblue;
+                    border-bottom: 2px solid darkblue;
                     border-radius: 10%;
                     transition: .2s all;
 
                     &:hover,
                     &:active{
-                        background-color: rgba($color: blue, $alpha: .6);
-                        font-style: italic;
                         font-weight: bold;
-                        color: white;
+                        border-bottom: 2.5px solid darkblue;
+                        padding: .5rem 1rem;
                     }
 
                     a{
                         text-decoration: none;
                         letter-spacing: .1rem;
                     }
+                }
+
+                .navbar-item.displayTRUE {
+                    visibility: visible;
+                }
+                .navbar-item.displayFALSE {
+                    visibility: hidden;
                 }
             }
         }
@@ -98,13 +104,36 @@ body {
     /*---------------------------------------------------------------------------------------*
      *                                 M A I N                                               *
      *---------------------------------------------------------------------------------------*/    
-    section{
-        width: 100%;
-        margin-top: 0;
-        height: 600px;
-        background: radial-gradient(at top right, rgba(255,255,255,1) 0%, rgba(196, 72, 72, 0.48) 100%);
+    // main{
 
-        .container {
+    //     .firstSection{
+    //         width: 100%;
+    //         height: 700px;
+    //         margin: 0;
+    //         padding: 0;
+    //         bottom:.5rem;
+    //         position: relative;;
+    //         z-index: 5;
+
+    //         h1{
+    //             border-bottom: 2px solid orange;
+    //             color: darkblue;
+    //         }
+    //     }
+
+    // }
+
+
+    .landingImage{
+        width: 100%;
+        background-image: url('../img/index.jpg');
+        background-position: top;
+        background-repeat: no-repeat;
+        background-size: cover;
+        top: 5rem;
+        height: 600px;
+
+        .landingContainer{
             position: relative;
             margin: 0;
             padding: 0;
@@ -113,8 +142,29 @@ body {
             top: 20rem;
             left: 4rem;
             font-family: 'Dancing Script', cursive; 
+        }    
+
+        .message{
+            background-color: lightgray;
+            border-color: .3rem solid rgb(17, 0, 255);
+            width: 100%;
+            margin: 0;
+            padding: 1rem 2rem;
+            text-align: center;
+            font-weight: bolder;
+            color: darkblue;
         }
-    }
+
+        #landingPageVideo{
+            object-fit: cover;
+            width: 100%;
+            height: 100vh;
+            //position: fixed;
+            top: 0;
+            left: 0;
+        }
+    }       
+    
 
     /*---------------------------------------------------------------------------------------*
      *                                 F O O T E R                                           *
