--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -2,17 +2,17 @@
         <footer>
             <div class="footer-container">
                 <ul>
-                    <li>
+                    <li class="footerElement">
                         <a href="/" target="_blank" rel="noopener noreferrer">
                             Link 1
                         </a>
                     </li>
-                    <li>
+                    <li class="footerElement">
                         <a href="/" target="_blank" rel="noopener noreferrer">
                             Link 2
                         </a>
                     </li>
-                    <li>
+                    <li class="footerElement">
                         <a href="/" target="_blank" rel="noopener noreferrer">
                             Link 3
                         </a>
@@ -21,5 +21,6 @@
             </div>
         </footer>
         
+        <script src="/js/scriptings.js"></script>
     </body>
 </html>
