--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -12,6 +12,14 @@
         <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
         <!-- PWA MANIFEST -->
         <link rel="manifest" href="/manifest.json">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black">
+        <meta name="apple-mobile-web-app-title" content="SpreadLove!">
+        <link rel="apple-touch-icon" href="/icons/apple-icon-114x114.png" sizes="114x114">
+        <link rel="apple-touch-icon" href="/icons/apple-icon-120x120.png" sizes="120x120">
+        <link rel="apple-touch-icon" href="/icons/apple-icon-144x144.png" sizes="144x144">
+        <link rel="apple-touch-icon" href="/icons/apple-icon-152x152.png" sizes="152x152">
+        <link rel="apple-touch-icon" href="/icons/apple-icon-180x180.png" sizes="180x180">
         <!-- Custom Styles -->
         <link rel="stylesheet" href="/css/index.css">
     </head>
