Update on ServiceWorkers

--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -22,5 +22,6 @@
         </footer>
         
         <script src="/js/scriptings.js"></script>
+        <script src="/service-worker.js"></script>
     </body>
 </html>
