--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -12,6 +12,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
         <!-- PWA MANIFEST -->
         <link rel="manifest" href="/manifest.json">
+        <!-- PWA for Apple -->
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black">
         <meta name="apple-mobile-web-app-title" content="SpreadLove!">
@@ -20,6 +21,11 @@
         <link rel="apple-touch-icon" href="/icons/apple-icon-144x144.png" sizes="144x144">
         <link rel="apple-touch-icon" href="/icons/apple-icon-152x152.png" sizes="152x152">
         <link rel="apple-touch-icon" href="/icons/apple-icon-180x180.png" sizes="180x180">
+        <!-- PWA for IE -->
+        <meta name="msapplication-TileImage" content="/icons/app-icon-144x144.png">
+        <meta name="msapplication-TileColor" content="#fff">
+        <!-- PWA for all -->
+        <meta name="theme-color" content="#3f51b5">
         <!-- Custom Styles -->
         <link rel="stylesheet" href="/css/index.css">
     </head>
