--- a/public/views/includes/footer.ejs
+++ b/public/views/includes/footer.ejs
@@ -22,6 +22,6 @@
         </footer>
         
         <script src="/js/scriptings.js"></script>
-        <script src="/service-worker.js"></script>
+        <script src="/manifest/sw-registration.js"></script>
     </body>
 </html>
