--- a/public/views/includes/header.ejs
+++ b/public/views/includes/header.ejs
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="/css/all.css">
         <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
         <!-- PWA MANIFEST -->
-        <link rel="manifest" href="/manifest.json">
+        <link rel="manifest" href="/manifest/manifest.json">
         <!-- PWA for Apple -->
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black">
