UserPrompt auf HomeScreen

--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -21,7 +21,7 @@
         <div class="message"><%= message %></div>
     <% } %>
 </section>
-
+<button class="btnPWAShowBanner" style="display:block; padding: 2rem 3rem; background-color: rgba(200, 200, 160, .7);">Installation banner anzeigen</button>
 
 <!-- FOOTER -->
 <%- include('./includes/footer.ejs') %>
