--- a/public/views/404.ejs
+++ b/public/views/404.ejs
@@ -2,7 +2,7 @@
 <%- include('./includes/header.ejs') %>
 
 
-<h1><%= failureTitle %></h1>        
+<h1 class="border-line"><%= failureTitle %></h1>        
 
 
 <!-- FOOTER -->
