--- a/public/views/authentication/resetPwd.ejs
+++ b/public/views/authentication/resetPwd.ejs
@@ -5,7 +5,7 @@
 <section>
     <div class="container">
         
-        <h1>Passwort zurücksetzen:</h1>
+        <h1 class="border-line">Passwort zurücksetzen:</h1>
         
         <form method="POST" action="/authentication/resetPwd">
             <p><input type="text" name="email" value="<%= email %>" placeholder="Email"></p>
