--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,208 +1,164 @@
+@charset "UTF-8";
 html {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  scroll-behavior: smooth;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
 }
 
-body {
+/*======= ALLGEMEIN ======*/
+body, p {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 300;
   margin: 0;
   padding: 0;
-  background-color: white;
-  overflow: hidden;
-  /*---------------------------------------------------------------------------------------*
-     *                                 H E A D E R                                           *
-     *---------------------------------------------------------------------------------------*/
-  /*---------------------------------------------------------------------------------------*
-     *                                 M A I N                                               *
-     *---------------------------------------------------------------------------------------*/
-  /*---------------------------------------------------------------------------------------*
-     *                                 F O O T E R                                           *
-     *---------------------------------------------------------------------------------------*/
+  /* Überschriften */
+  /* Button */
+  /* Section */
+  /* Hilfsklassen */
 }
 
-body .main-header {
-  display: inline-block;
-  background-color: rgba(255, 255, 255, 0.3);
-  position: fixed;
+body h1,
+body h2,
+body h3,
+body h4,
+body h5,
+body h6,
+body .font-alt, p h1,
+p h2,
+p h3,
+p h4,
+p h5,
+p h6,
+p .font-alt {
+  font-family: 'Raleway', sans-serif;
+  color: #bd45a3;
+}
+
+body h1.border-line,
+body h2.border-line,
+body h3.border-line,
+body h4.border-line,
+body h5.border-line,
+body h6.border-line,
+body .font-alt.border-line, p h1.border-line,
+p h2.border-line,
+p h3.border-line,
+p h4.border-line,
+p h5.border-line,
+p h6.border-line,
+p .font-alt.border-line {
+  padding-bottom: .5rem;
+  border-bottom: 2px solid #bd45a3;
+}
+
+body .danceFont, p .danceFont {
+  font-family: 'Dancing Script', cursive;
+  color: #bd45a3;
+}
+
+body .btn-round, p .btn-round {
+  border-radius: 1rem;
+}
+
+body section, p section {
+  padding: 5rem 0;
+}
+
+body .d-relative, p .d-relative {
+  position: relative;
+}
+
+body .bg-overlay, p .bg-overlay {
+  height: 100%;
   width: 100%;
-  height: 3.5rem;
+  background-color: rgba(200, 200, 200, 0.6);
+  position: absolute;
   top: 0;
   left: 0;
-  padding: 0;
-  margin: 0;
-  border-bottom: 3px solid rgba(255, 255, 255, 0.4);
-  -webkit-transition: .5s all;
-  transition: .5s all;
 }
 
-body .main-header:hover, body .main-header:active {
-  background-color: rgba(255, 255, 255, 0.7);
-  height: 5rem;
+/*======= NAVIGATION ======*/
+nav {
+  -webkit-transition: 1.4s ease-in-out;
+  transition: 1.4s ease-in-out;
 }
 
-body .main-header .navbar-image {
-  display: inline-block;
-  margin-left: 2rem;
-  padding: 0;
-  width: 5rem;
-  vertical-align: middle;
+.navbar .navbar-nav .nav-link,
+button .navbar-toggler {
+  color: #535252;
 }
 
-body .main-header .navbar-image a > img {
-  width: 2.5rem;
-  height: 2.5rem;
-  border: 3px solid darkblue;
-  border-radius: 50%;
-  -webkit-transition: 1s all;
-  transition: 1s all;
+.brand-logo-40 {
+  height: 40px;
 }
 
-body .main-header .navbar-image a > img:hover, body .main-header .navbar-image a > img:active {
-  border: 3px solid rgba(198, 25, 25, 0.48);
+.navbar button:hover,
+.navbar button:focus,
+.navbar .nav-link:hover {
+  color: #bd45a3;
 }
 
-body .main-header .navbar {
-  display: inline-block;
-  width: 80%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  text-align: right;
-  list-style: none;
-}
-
-body .main-header .navbar .navbar-items {
-  display: inline-block;
-  padding: 0;
-  margin: 0;
-  margin-top: .7rem;
-}
-
-body .main-header .navbar .navbar-items .navbar-item {
-  display: inline-block;
-  margin: 0 .6rem;
-  padding: .25rem 1rem;
-  border-bottom: 2px solid darkblue;
-  border-radius: 10%;
-  -webkit-transition: .2s all;
-  transition: .2s all;
-}
-
-body .main-header .navbar .navbar-items .navbar-item:hover, body .main-header .navbar .navbar-items .navbar-item:active {
-  font-weight: bold;
-  border-bottom: 2.5px solid darkblue;
-  padding: .5rem 1rem;
-}
-
-body .main-header .navbar .navbar-items .navbar-item a {
-  text-decoration: none;
-  letter-spacing: .1rem;
-}
-
-body .main-header .navbar .navbar-items .navbar-item.displayTRUE {
+.showLogin {
   visibility: visible;
 }
 
-body .main-header .navbar .navbar-items .navbar-item.displayFALSE {
+.hideLogin {
   visibility: hidden;
 }
 
-body .landingImage {
-  width: 100%;
-  background-image: url("../img/index.jpg");
-  background-position: top;
-  background-repeat: no-repeat;
-  background-size: cover;
-  top: 5rem;
-  height: 600px;
-}
-
-body .landingImage .landingContainer {
-  position: relative;
-  margin: 0;
-  padding: 0;
-  width: 80%;
-  height: 10%;
-  top: 20rem;
-  left: 4rem;
-  font-family: 'Dancing Script', cursive;
-}
-
-body .landingImage .message {
-  background-color: lightgray;
-  border-color: 0.3rem solid #1100ff;
-  width: 100%;
-  margin: 0;
-  padding: 1rem 2rem;
-  text-align: center;
-  font-weight: bolder;
-  color: darkblue;
-}
-
-body .landingImage #landingPageVideo {
-  -o-object-fit: cover;
-     object-fit: cover;
-  width: 100%;
+/*======= HERO SECTION ======*/
+.hero-bg {
+  background: url("/img/alicia_hero.png") 30% 0 fixed no-repeat;
   height: 100vh;
-  top: 0;
-  left: 0;
+  width: 100%;
+  background-size: contain;
+  /* Medium devices (landscape tablets, 768px and up) */
 }
 
-body footer {
-  background-color: rgba(0, 128, 0, 0.3);
-  position: fixed;
+.hero-section {
+  position: absolute;
+  top: 40%;
+  right: 15%;
+  width: auto;
+}
+
+.iconDown {
+  color: #bd45a3;
+  font-size: larger;
+}
+
+/*======= ABOUT US SECTION ======*/
+.img-bg {
+  position: absolute;
+  overflow: hidden;
+  right: 0;
+  bottom: 0;
+  width: 50vh;
+}
+
+#home .btn {
+  -webkit-transition: 1s all ease-in-out;
+  transition: 1s all ease-in-out;
+}
+
+/*======= QUOTES ======*/
+.quotes-bg {
+  background: url("/img/alicia_landscape.JPG") 30% 0 fixed no-repeat;
+  height: 100%;
   width: 100%;
-  margin: 0;
-  padding: 0;
+  background-size: cover;
+  -webkit-filter: brightness(1.14);
+          filter: brightness(1.14);
+  /* Medium devices (landscape tablets, 768px and up) */
+}
+
+#quotes .rounded-circle {
+  border: 5px solid #535252;
+}
+
+footer {
+  position: fixed;
   bottom: 0;
   left: 0;
-}
-
-body footer .footer-container {
-  background-color: rgba(0, 0, 0, 0.8);
   width: 100%;
-  height: 3.5rem;
-  margin: 0;
-  padding: 0;
-}
-
-body footer .footer-container ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  display: -ms-grid;
-  display: grid;
-      grid-template-areas: "left middle right";
-  height: 100%;
-}
-
-body footer .footer-container ul li {
-  height: 100%;
-  width: 100%;
-}
-
-body footer .footer-container ul li a {
-  display: block;
-  width: 100%;
-  height: 100%;
-  text-decoration: none;
-  color: white;
-  font-weight: bolder;
-}
-
-body footer .footer-container ul li:nth-child(1) {
-  grid-area: "left";
-  background-color: yellow;
-}
-
-body footer .footer-container ul li:nth-child(2) {
-  grid-area: "middle";
-  background-color: lightcoral;
-}
-
-body footer .footer-container ul li:nth-child(3) {
-  grid-area: "right";
-  background-color: gold;
 }
 /*# sourceMappingURL=index.css.map */
