--- a/public/views/includes/footer.ejs
+++ b/public/views/includes/footer.ejs
@@ -1,26 +1,31 @@
         <!-- FOOTER -->
-        <footer>
-            <div class="footer-container">
-                <ul>
-                    <li class="footerElement">
-                        <a href="/" target="_blank" rel="noopener noreferrer">
-                            Link 1
+        <footer class="bg-dark text-dark pt-1 pb-1 text-center">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <a href="/impressum" class="text-justify-center" target="_blank" rel="Impressum">
+                            Impressum
                         </a>
-                    </li>
-                    <li class="footerElement">
-                        <a href="/" target="_blank" rel="noopener noreferrer">
-                            Link 2
+                    </div>
+                    <div class="col">
+                        <a href="/datenschutz" class="text-justify-center" target="_blank" rel="Datenschutz">
+                            Datenschutz
                         </a>
-                    </li>
-                    <li class="footerElement">
-                        <a href="/" target="_blank" rel="noopener noreferrer">
-                            Link 3
+                    </div>
+                    <div class="col">
+                        <a href="/webDevelopment" class="text-justify-center" target="_blank" rel="webDevelopment">
+                            DSGVO
                         </a>
-                    </li>
-                </ul>
+                    </div>
+                </div>
             </div>
         </footer>
-        
+
+        <!-- JS -->
+        <script src="/js/jquery-3.5.1.min.js"></script>
+        <script src="/js/bootstrap.bundle.min.js"></script>
+
+        <!-- CUSTOM -->
         <script src="/js/scriptings.js"></script>
         <script src="/manifest/sw-registration.js"></script>
     </body>
