--- a/public/views/includes/header.ejs
+++ b/public/views/includes/header.ejs
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html lang="de">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
         <title>SpreadLove.one</title>
         
         <!-- 3rd Party Styles -->
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300&family=Raleway:wght@600&display=swap&family=Dancing+Script&display=swap" rel="stylesheet" rel="stylesheet">
+        <link rel="stylesheet" href="/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/css/bootstrap-icons.css">
         <link rel="stylesheet" href="/css/all.css">
-        <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
         <!-- PWA MANIFEST -->
         <link rel="manifest" href="/manifest/manifest.json">
         <!-- PWA for Apple -->
@@ -30,25 +32,43 @@
         <link rel="stylesheet" href="/css/index.css">
     </head>
     <body>
+        
         <!-- HEADER -->
-        <header class="main-header">
-            <!-- Navigation Image -->
-            <div class="navbar-image">
-                <a href="/" alt="Home"><img src="/img/spreadlove.jpg"></a>
-            </div>
-            
-            <!-- Navigation Items -->
-            <nav class="navbar">
-                <ul class="navbar-items">
-                    <li class="navbar-item <%= isLoggedIn ? 'displayFALSE' : 'displayTRUE' %>">
-                        <a href="/authentication/login">Login</a>
-                    </li>
-                    <li class="navbar-item">
-                        <a href="/">Seite 2</a>
-                    </li>
-                    <li class="navbar-item">
-                        <a href="/">Seite 3</a>
-                    </li>
-                </ul>
-            </nav>    
+        <header>
+            <nav class="navbar navbar-expand-lg fixed-top py-0">
+                <div class="container">
+                    <!-- Logo mit Namen -->
+                    <a href="/" class="navbar-brand font-alt">
+                        <img src="/img/logo.jpg" alt="Logo" class="brand-logo-40 mr-2">Spreadlove <span class="danceFont">Every</span>.ONE
+                    </a> 
+
+                    <!-- Button -->
+                    <button class="navbar-toggler btn-round" type="button" data-toggle="collapse" data-target="#navbartoggle" aria-controls="navbar-toggle">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <!-- Menü -->
+                    <div class="collapse navbar-collapse justify-content-end text-uppercase" id="navbartoggle">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a href="#home" class="nav-link active">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#aboutUs" class="nav-link">About us</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#quotes" class="nav-link">Quotes</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#gallery" class="nav-link">Gallery</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#saysomething" class="nav-link">Say something</a>
+                            </li>
+                            <li class="nav-item <%= !isLoggedIn ? 'showLogin' : 'hideLogin' %>"">
+                                <a href="/authentication/login" class="nav-link">Login</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div> <!--ende container-->
+            </nav>
         </header>
