--- a/public/views/includes/footer.ejs
+++ b/public/views/includes/footer.ejs
@@ -21,9 +21,10 @@
             </div>
         </footer>
 
-        <!-- JS -->
+        <!-- 3rd Party JS -->
         <script src="/js/jquery-3.5.1.min.js"></script>
         <script src="/js/bootstrap.bundle.min.js"></script>
+        <script src="/js/aos.js"></script>
 
         <!-- CUSTOM -->
         <script src="/js/scriptings.js"></script>
