--- a/public/css/index.scss
+++ b/public/css/index.scss
@@ -1,9 +1,11 @@
 html {
     box-sizing: content-box;
+    scroll-behavior: smooth;
 }
 
-/*======= ALLGEMEIN ======*/
+/*========================= ALLGEMEIN =========================*/
 body, p {
+    position: relative;
     font-family: 'Montserrat', sans-serif;
     font-weight: 300;
     margin: 0;
@@ -22,7 +24,6 @@ body, p {
 
         &.border-line{
             padding-bottom: .5rem;
-            border-bottom: 2px solid #bd45a3;
         }
     }
 
@@ -38,7 +39,8 @@ body, p {
 
     /* Section */
     section{
-        padding: 5rem 0;
+        padding-top: 5rem;
+        height: 100vh;
     }
 
     /* Hilfsklassen */
@@ -49,34 +51,64 @@ body, p {
     .bg-overlay{
         height: 100%;
         width: 100%;
-        background-color: rgba(200,200,200,.6);
+        background-color: rgba(250,250,250,0.7);
         position: absolute;
         top: 0;
         left: 0;
+    }
+
+    #backtotop{
+        position: fixed;
+        width: 1.4rem;
+        height: 1.4rem;
+        bottom: 3.6rem;
+        right: 1rem;
+        z-index: 9999;
+        
+        a{
+            text-decoration: none;
+            color: #bd45a3;
+            font-size: 1.8rem;
+            text-shadow: 0 0 20px gray;
+        }
+        
     }
 }
 
 
 
 
-/*======= NAVIGATION ======*/
+/*========================= NAVIGATION =========================*/
 nav{
     transition: 1.4s ease-in-out;
+}
+
+.navbar .container .navbar-brand{
+    transition: 1.4s all;
+
+    &:hover,
+    &:active{
+        text-shadow: 0 0 12px #bd45a3;
+    }
 }
 
 .navbar .navbar-nav .nav-link,
 button .navbar-toggler {
     color:rgb(83, 82, 82);
+    transition: 0.8s all ease-in-out;
 }
 
 .brand-logo-40{
     height: 40px;
+    border-radius: 20%;
 }
 
 .navbar button:hover,
 .navbar button:focus,
-.navbar .nav-link:hover{
+.navbar .nav-link:hover,
+.navbar .navbar-nav .nav-link.active{
     color: #bd45a3;
+    text-shadow: 0 0 12px #bd45a3;
 }
 
 
@@ -89,9 +121,9 @@ button .navbar-toggler {
 }
 
 
-/*======= HERO SECTION ======*/
+/*========================= HERO SECTION =========================*/
 .hero-bg{
-    background: url('/img/alicia_hero.png') 30% 0 fixed no-repeat;
+    background: url('/img/alicia_hero.png') 30% 3rem fixed no-repeat;
     height: 100vh;
     width: 100%;
     background-size: contain;
@@ -122,27 +154,34 @@ button .navbar-toggler {
     font-size: larger;
 }
 
-/*======= ABOUT US SECTION ======*/
+
+.hero-section .btn {
+    transition: 1.4s all ease-in-out;
+}
+
+
+/*========================= ABOUT US SECTION =========================*/
+#aboutUs{
+    width: 100%;
+    background-color: rgba(240,240,240,0.6);
+}
+
+
 .img-bg{
     position: absolute;
     overflow: hidden;
     right: 0;
-    bottom: 0;
-    width: 50vh;
-}
-
-#home .btn {
-    transition: 1s all ease-in-out;
+    top: -5rem;
+    width: 100%;
 }
 
 
-/*======= QUOTES ======*/
+/*========================= QUOTES =========================*/
 .quotes-bg{
-    background: url('/img/alicia_landscape.JPG') 30% 0 fixed no-repeat;
+    background: url('/img/gh_kampl_styria.jpg') 60% 3rem fixed no-repeat;
     height: 100%;
     width: 100%;
     background-size: cover;
-    filter: brightness(1.14);
     
     /* Medium devices (landscape tablets, 768px and up) */
     // @media only screen and (max-width: 768px) {
@@ -159,6 +198,7 @@ button .navbar-toggler {
 }
 
 
+/*========================= FOOTER =========================*/
 footer{
     position: fixed;
     bottom: 0;
