--- a/public/views/includes/header.ejs
+++ b/public/views/includes/header.ejs
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="/css/bootstrap.min.css">
         <link rel="stylesheet" href="/css/bootstrap-icons.css">
         <link rel="stylesheet" href="/css/all.css">
+        <link rel="stylesheet" href="/css/aos.css">
         <!-- PWA MANIFEST -->
         <link rel="manifest" href="/manifest/manifest.json">
         <!-- PWA for Apple -->
@@ -31,20 +32,20 @@
         <!-- Custom Styles -->
         <link rel="stylesheet" href="/css/index.css">
     </head>
-    <body>
+    <body data-spy="scroll" data-target=".navbar" data-offset="50">
         
         <!-- HEADER -->
         <header>
             <nav class="navbar navbar-expand-lg fixed-top py-0">
                 <div class="container">
                     <!-- Logo mit Namen -->
-                    <a href="/" class="navbar-brand font-alt">
+                    <a href="/" class="navbar-brand text-dark font-alt">
                         <img src="/img/logo.jpg" alt="Logo" class="brand-logo-40 mr-2">Spreadlove <span class="danceFont">Every</span>.ONE
                     </a> 
 
                     <!-- Button -->
-                    <button class="navbar-toggler btn-round" type="button" data-toggle="collapse" data-target="#navbartoggle" aria-controls="navbar-toggle">
-                        <span class="navbar-toggler-icon"></span>
+                    <button class="navbar-toggler btn-round border-dark" type="button" data-toggle="collapse" data-target="#navbartoggle" aria-controls="navbar-toggle">
+                        <span class="fa fa-bars"></span>
                     </button>
                     <!-- Menü -->
                     <div class="collapse navbar-collapse justify-content-end text-uppercase" id="navbartoggle">
