latest version incl carousel

--- a/public/views/includes/header.ejs
+++ b/public/views/includes/header.ejs
@@ -57,14 +57,14 @@
                                 <a href="#aboutUs" class="nav-link">About us</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#quotes" class="nav-link">Quotes</a>
+                                <a href="#pregnant" class="nav-link">Pregnancy</a>
                             </li>
                             <li class="nav-item">
                                 <a href="#gallery" class="nav-link">Gallery</a>
                             </li>
-                            <li class="nav-item">
+                            <!-- <li class="nav-item">
                                 <a href="#saysomething" class="nav-link">Say something</a>
-                            </li>
+                            </li> -->
                             <li class="nav-item <%= !isLoggedIn ? 'showLogin' : 'hideLogin' %>"">
                                 <a href="/authentication/login" class="nav-link">Login</a>
                             </li>
