--- a/public/css/index.css
+++ b/public/css/index.css
@@ -190,6 +190,36 @@ button .navbar-toggler {
   border: 5px solid #535252;
 }
 
+.card-deck .card {
+  -webkit-transition: 0.8s all ease-in-out;
+  transition: 0.8s all ease-in-out;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+.card-deck .card:hover, .card-deck .card:focus {
+  -webkit-box-shadow: 0 0 16px #bd45a3;
+          box-shadow: 0 0 16px #bd45a3;
+}
+
+.card-deck .card img {
+  max-width: 100%;
+}
+
+/*========================= GALLERY =========================*/
+#gallery {
+  width: 100%;
+  height: 80vh;
+  margin: 0;
+  padding: 0;
+  background-color: rgba(240, 240, 240, 0.6);
+}
+
+#gallery .carousel-inner .carousel-item img {
+  height: 80vh;
+  margin: auto;
+}
+
 /*========================= FOOTER =========================*/
 footer {
   position: fixed;
