--- a/public/css/index.scss
+++ b/public/css/index.scss
@@ -197,6 +197,38 @@ button .navbar-toggler {
     border: 5px solid rgb(83, 82, 82);
 }
 
+.card-deck .card{
+    transition: 0.8s all ease-in-out;
+    box-shadow: none;
+
+    &:hover, 
+    &:focus{
+        box-shadow: 0 0 16px #bd45a3;
+    }
+
+    img{
+        max-width: 100%;
+    }
+}
+
+
+
+/*========================= GALLERY =========================*/
+#gallery{
+    width: 100%;
+    height: 80vh;
+    margin: 0;
+    padding: 0;
+    background-color: rgba(240,240,240,0.6);
+
+    .carousel-inner .carousel-item img {
+        height: 80vh;
+        margin: auto;
+    }
+}
+
+
+
 
 /*========================= FOOTER =========================*/
 footer{
