--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -22,7 +22,7 @@
             <h1 class="display-5 text-dark mt-5 pt-5 mb-4">SpreadLove. <span class="danceFont danceRotate">Every</span>ONE</h1>
         <% } %>
 
-        <p class="lead text-dark">Hommage an meine geliebte Frau Alicia! <i class="bi bi-heart"></i></p>
+        <p class="lead text-dark">Liebeserklärung an meine Frau Alicia! <i class="bi bi-heart"></i></p>
         <a href="#aboutUs" role="button" class="btn btn-round btn-lg btn-outline-dark mt-2">
             <small class="pr2">Lies mehr von uns...</i> <i class="bi bi-arrow-down-circle-fill iconDown"></i></small> 
         </a>
@@ -72,43 +72,101 @@
 
 
 <!--===========================================================================
-                          QUOTES                                            -->
-<section id="quotes" class="d-relative quotes-bg">
+                          SCHWANGERSCHAFT                                   -->
+<section id="pregnant" class="d-relative quotes-bg pb-5">
     <div class="bg-overlay"></div>
     <div class="container">
+        <h1>Bilder unserer Schwangerschaft...</h1>
         <div class="row justify-content-center mb-5">
-            <div class="col-md-8 text-center">
-                <h1 class="mb-4">Schwanger!!!</h1>
-                <p class="text-dark lead">
-                    Ein paar Impressionen... <i class="bi bi-heart"></i> 
-                </p>
-            </div> <!--ende col-->
-        </div> <!--ende row-->
 
-        <div class="row justify-content-between">
-            <div class="col-md text-center mx-5 mr-md-0 mr-lg-3 mb-5 mb-md-auto">
-                <img src="/img/OCHB2246.JPG" alt="quote1" class="img-fluid mb-4 rounded-circle">
-                <h3 class="mb-3">Alicia</h3>
-                <p class="text-white px-4">
-                    ... das ist meine wunderschöne Frau Alica!
-                </p>
-            </div><!--ende col-->
-            <div class="col-md text-center mx-5 mx-md-0 mx-lg-3 mb-5 mb-md-auto">
-                <img src="/img/ohBaby.JPG" alt="quote2" class="img-fluid mb-4 rounded-circle">
-                <h3 class="mb-3">Alicia</h3>
-                <p class="text-white px-4">
-                    ... und hier auch!
-                </p>
-            </div><!--ende col-->
-            <div class="col-md text-center mx-5 ml-md-0 ml-lg-3">
-                <img src="/img/alicia.JPG" alt="quote3" class="img-fluid mb-4 rounded-circle">
-                <h3 class="mb-3">Alicia</h3>
-                <p class="text-white px-4">
-                    ... und gleich noch einmal!
-                </p>
-            </div><!--ende col-->
+            <!-- card deck 1 -->
+            <div data-aos="zoom-in-up" class="card-deck">
+                <div class="card">
+                    <img src="/img/section preg/preg_3th_month.jpg" alt="pregnent_3months">
+                    <div class="card-body">
+                        <h4 class="card-title">drittes Monat</h4>
+                        <p class="card-text">
+                            dieses Foto wurde im dritten Schwangerschaftsmonat aufgenommen
+                        </p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">3 months</small>
+                    </div>
+                </div>
 
-        </div> <!--ende row-->
+                <div data-aos="zoom-in-up" class="card">
+                    <img src="/img/section preg/preg_4th_month.jpg" alt="pregnent_4months">
+                    <div class="card-body">
+                        <h4 class="card-title">viertes Monat</h4>
+                        <p class="card-text">
+                            vier Monate schwanger
+                        </p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">4 months</small>
+                    </div>
+                </div>
+
+                <div data-aos="zoom-in-up" class="card">
+                    <img src="/img/section preg/preg_5th_month.jpg" alt="pregnent_5months">
+                    <div class="card-body">
+                        <h4 class="card-title">FÜNF Monate!!</h4>
+                        <p class="card-text">
+                            fünf Monate - ist das zu fassen!?
+                        </p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">5 months</small>
+                    </div>
+                </div>
+            </div>
+            
+            <br>
+
+            <!-- card deck 2 -->
+            <div data-aos="zoom-in-up" class="card-deck">
+                <div class="card">
+                    <img src="/img/section preg/preg_6th_month.jpg" alt="pregnent_6months">
+                    <div class="card-body">
+                        <h4 class="card-title">Sechs Monate</h4>
+                        <p class="card-text">
+                            ich liebe es, wenn meine kleine Prinzessin strampelt 
+                        </p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">6 months</small>
+                    </div>
+                </div>
+
+                <div data-aos="zoom-in-up" class="card">
+                    <img src="/img/section preg/ohBaby.jpg" alt="placeholder">
+                    <div class="card-body">
+                        <h4 class="card-title">more to come...</h4>
+                        <p class="card-text">
+                            <small class="text-muted">* Placeholder</small>
+                        </p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">liegt noch vor uns!</small>
+                    </div>
+                </div>
+
+                <div data-aos="zoom-in-up" class="card">
+                    <img src="/img/section preg/ohBaby.jpg" alt="placeholder">
+                    <div class="card-body">
+                        <h4 class="card-title">more to come...</h4>
+                        <p class="card-text">
+                            <small class="text-muted">* Placeholder</small>
+                        </p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">liegt noch vor uns!</small>
+                    </div>
+                </div>
+            </div>
+
+            
+        </div> <!-- ende row -->
     </div> <!--ende container-->
 </section>
 
@@ -116,65 +174,58 @@
 <!--===========================================================================
                           GALLERIE                                          -->
 <section id="gallery">
-    <div class="container">
-        <div class="row mb-5">
-            <div class="col mb-5 text-center">
-                <h1>Gallerie</h1>
-                <div class="card-columns">
-                    <div class="card">
-                        <img class="card-img" src="" alt="">
-                    </div>
-                </div> 
-            </div>  
-        </div> 
+    <div class="container-fluid">
+
+
+        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+              <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="/img/kleine_kanzel_2020.jpg" class="d-block" alt="Bild 1/3">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Jahr 2020</h5>
+                  <p class="text-dark">Hohe Wand: kleine Kanzel (2020)</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="/img/gh_kampl_styria.jpg" class="d-block" alt="Bild 2/3">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Sommer 2020</h5>
+                  <p class="text-dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="/img/kleine_kanzel_2020_2.jpg" class="d-block" alt="Bild 3/3">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Ebenfalls 2020</h5>
+                  <p class="text-dark">Hohe Wand: kleine Kanzel 2 (2020)</p>
+                </div>
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon bg-dark" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+              <span class="carousel-control-next-icon bg-dark" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+
+
     </div> 
 </section>
 
 
 
 
-<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-    <ol class="carousel-indicators">
-        <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"></li>
-        <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"></li>
-        <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="/img/alicia.JPG" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-            <h5>First slide label</h5>
-            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <img src="/img/alicia_landscape.JPG" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-            <h5>Second slide label</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <img src="/img/ohBaby.JPG" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-            <h5>Third slide label</h5>
-            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-            </div>
-        </div>
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </a>
-  </div>
 
 
-
-
+<!-- PWA Banner -->
 <section>
     <button class="btnPWAShowBanner">Installation banner anzeigen</button>
 </section>
